# Screen-Translator

./: .gitignore  CMakeLists.txt  app.rc  et --hard d0633ae  main.cpp  res.qrc  todo.txt
libs/lib/: archive.lib  gif.lib  leptonica-1.85.0.lib  libsharpyuv.lib  libwebp.lib  libwebpdecoder.lib  libwebpdemux.lib  libwebpmux.lib  lzma.lib  openjp2.lib  tesseract55.lib  turbojpeg.lib
src/ocr/: IOcrEngine.h  TesseractOcrEngine.cpp  TesseractOcrEngine.h
src/screenshotSnipper/: screenshotsnipper.cpp  screenshotsnipper.h
src/translator/: ITranslatorAPI.h  geminitranslator.cpp  geminitranslator.h  prompt.h
src/utils/ClipboardManager/: IClipboardService.h  clipboardmanager.cpp  clipboardmanager.h
src/utils/SecretManager/: secretmanager.cpp  secretmanager.h
src/utils/enums/: enums.h
ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
ui/CustomWidgets/: backbutton.cpp  backbutton.h  decisionpanel.cpp  decisionpanel.h  decisionpanel.ui  draggableframe.cpp  draggableframe.h  slidingstackedwidget.cpp  slidingstackedwidget.h  trilabelbutton.cpp  trilabelbutton.h  trilabelbutton.ui
ui/Overlay/: OverlayWidget.cpp  OverlayWidget.h
